# AI-Agentic-TP2

./: RAGV2.ipynb  README.md  main.py  pyproject.toml  rag.py
